--- a/content/01.html
+++ b/content/01.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>关于这个网站</title>
     <link rel="stylesheet" href="sye.css">
 </head>
 <body class="bg">
+    <a href="../ssn.html">返回目录</a>
     <div class="main_0">
         <p>Update on Oct 19,2024</p>
         <h1>关于这个网站</h1><br>
         <div class="main_1">
             <p>其实这个网站是我以前（在陈嘉庚的时候）做的一个个人网站。如果你们在10月19日前就点进来，看到的是跟现在完全不一样的一个界面。<br>
-                旧的网站只是一个空壳子，我没有写实际的功能。现在这个网站就有功能了，但是不一定有人看。</p>
-            <p>待完善……</p>
+            旧的网站只是一个空壳子，我没有写实际的功能。现在这个网站就有功能了，但是不一定有人看。</p>
+            <p>7月12日（大概是这天），我最后来到我的教室，在电脑桌面上建了一个文件，输入了这段网址（https://waterworker32.github.io），然后离开陈嘉庚。<br>
+            我希望有一天学弟学妹们能发现这一个“学长的遗产”。</p>
+            <p>网站不定期更新。7月12日到10月18日一直没有更新，用的原来我的个人网站（因为我忙于高一）。周末我想起了这个网站，连夜敲了这些代码。<br>
+            这个网站其实很没有技术含量，只有文字没有图形。我为了让访问快一点就没有编辑图形（懒）。<br>
+            我是住校生，每周末才能看电脑，更新网站。</p>
+            <p>这个网站怎么做出来的呢？其实很简单，注册一个Github账号进行了。<a href="https://github.com">点这里进入Github（可能会很慢）</a></p>
         </div>
     </div>
 </body>
