--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <a href="https://www.wjx.cn/vm/rmK7unA.aspx">https://www.wjx.cn/vm/rmK7unA.aspx</a><br>
         <i>其实这个问卷怎么填都无所谓，只要让我知道有人提交就行了。</i><br>
         <p>既然这个网站已经被发现了，我就要开始运营了……</p><br><br>
-        <a href="./ssn.html">如果你已经完成了上面的链接，可以点这个链接</a>
+        <a href="./ssn.html">如果你已经完成了上面的链接，可以点这个链接</a><br>
+        <i>（神金网站害我笑一下）</i><br><br>
+        <p>Update on Oct 19,2024</p>
     </div>
 </body>
 </html>
