--- a/ssn.html
+++ b/ssn.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mainsye.css">
     <title>目录页</title>
-    <style>
-        .a{
-            background: #000;
-        }
-    </style>
 </head>
 <body>
     <div>
         <p>Update on Oct 19,2024</p>
         <h1>目录</h1>
-        <a href="./content/01.html">1.关于这个网站</a>
+        <a class="content_link" href="./content/01.html">1.关于这个网站</a><br>
+        <a class="content_link" href="./content/02.html">2.好玩有趣的东西</a><br>
+        <a class="content_link" href="./content/03.html">3.关于我</a><br>
+        <a class="content_link" href="https://www.bilibili.com/video/BV1GJ411x7h7/?spm_id_from=333.337.search-card.all.click&vd_source=f75c88390ae2b5b467630c279990c696">!.你肯定想看的</a><br>
+        <a class="content_link" href="./content/04.html">4.一些资源的下载链接</a><br>
     </div>
 </body>
 </html>
